- Removing yelp-customization.xsl
* stylesheets/Makefile.am:
- Removing yelp-customization.xsl

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -33,7 +33,6 @@ yelpcustomization_DATA = 	\
 	db2html-toc.xsl		\
 	db2html-xref.xsl	\
 	db2html.xsl		\
-	gettext.xsl		\
-	yelp-customization.xsl
+	gettext.xsl
 
 EXTRA_DIST=$(yelpcustomization_DATA)
