- Added test documents.
* configure.in:
* test/testdoc1/Makefile.am:
* test/testdoc1/legal.xml:
* test/testdoc1/testdoc1.omf:
* test/testdoc1/testdoc1.xml:
- Added test documents.

* data/toc.xml.in:
- Handling System|... stuff from SK.

* stylesheets/Makefile.am:
- Removed db2html-tmp.xsl:

* stylesheets/db2html-biblio.xsl:
* stylesheets/db2html-index.xsl:
* stylesheets/db2html-navbar.xsl:
* stylesheets/db2html-synopsis.xsl:
* stylesheets/db2html.xsl:
- Various additions and improvements.

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -281,4 +281,53 @@
 		<category>General|Linux|Other</category>
 		<category>General|Other</category>
 	</toc>
+
+	<toc id="System">
+		<_title>System</_title>
+
+			<category>System</category>
+			<category>System|Administration</category>
+			<category>System|Administration|Backups</category>
+			<category>System|Administration|Backups|Local</category>
+			<category>System|Administration|Backups|Remote</category>
+			<category>System|Administration|Filesystems</category>
+			<category>System|Administration|Networking</category>
+			<category>System|Administration|Networking|AppleTalk</category>
+			<category>System|Administration|Networking|PPP</category>
+			<category>System|Administration|Networking|SMB</category>
+			<category>System|Administration|Networking|TCP/IP</category>
+			<category>System|Administration|Networking|DNS</category>
+			<category>System|Administration|Networking|Other</category>
+			<category>System|Administration|Users</category>
+			<category>System|Administration|Other</category>
+			<category>System|Configuration</category>
+			<category>System|Configuration|Config Files</category>
+			<category>System|Configuration|Configuration Tools</category>
+			<category>System|Configuration|Other</category>
+			<category>System|Hardware</category>
+			<category>System|Hardware|Processor</category>
+			<category>System|Hardware|Storage</category>
+			<category>System|Hardware|Video</category>
+			<category>System|Hardware|Input Devices</category>
+			<category>System|Hardware|Networking</category>
+			<category>System|Hardware|PCI/ISA/PCMCIA</category>
+			<category>System|Hardware|Other</category>
+			<category>System|Package Management</category>
+			<category>System|Security</category>
+			<category>System|Security|Firewall</category>
+			<category>System|Security|Intrusion Detection</category>
+			<category>System|Security|Virus</category>
+			<category>System|Security|Other</category>
+			<category>System|Services</category>
+			<category>System|Services|HTTP</category>
+			<category>System|Services|FTP</category>
+			<category>System|Services|SMB</category>
+			<category>System|Services|SSH</category>
+			<category>System|Services|Telnet</category>
+			<category>System|Services|Syslog</category>
+			<category>System|Services|BIND</category>
+			<category>System|Services|Printing</category>
+			<category>System|Services|Other</category>
+			<category>System|Other</category>
+	</toc>
 </toc>
