Updated Serbian translation.
2003-12-29  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added src/yelp-theme.c.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/yelp-info.c
 src/yelp-main.c
 src/yelp-man.c
 src/yelp-pager.c
+src/yelp-theme.c
 src/yelp-toc-pager.c
 src/yelp-util.c
 src/yelp-window.c
