- Fix intltool problem with dist.
* Makefile.am:
- Fix intltool problem with dist.

* configure.in:
- Version 2.5.2.1.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,12 +12,13 @@ yelpdatadir = $(datadir)/yelp
 yelpdata_DATA = important_docs.xml
 
 
-EXTRA_DIST = 				\
-	intltool-extract.in  		\
-	intltool-merge.in    		\
-	intltool-update.in		\
-	idl/GNOME_Yelp.idl		\
-	important_docs.xml		\
-	$(DESKTOP_IN_FILES)		\
+EXTRA_DIST = 						\
+	intltool-extract.in  				\
+	intltool-merge.in    				\
+	intltool-update.in				\
+	intltool-modules/XML/Parser/Style/OrigTree.pm	\
+	idl/GNOME_Yelp.idl				\
+	important_docs.xml				\
+	$(DESKTOP_IN_FILES)				\
 	$(DESKTOP_FILES)
 
