- Added default CSS file.
* data/Makefile.am:
* data/default.css:
* src/yelp-theme.c:
* src/yelp-theme.h:
- Added default CSS file.

* src/yelp-toc-pager.c:
- Switched to using GString for writing the page.
- Put content writing in a separate function, to make inlining easier.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,11 +2,13 @@ SUBDIRS = icons ui
 
 @INTLTOOL_XML_RULE@
 
+cssdir = $(datadir)/yelp
 tocdir = $(datadir)/yelp
 
-toc_DATA =						\
-	toc.xml
+css_DATA = default.css
+toc_DATA = toc.xml
 
 EXTRA_DIST =						\
+	default.css					\
 	toc.xml.in					\
 	toc.xml
