- Made translations work in XSLT, still need to do plurals.
* po/POTFILES.in:
* stylesheets/Makefile.am:
* stylesheets/db2html-block.xsl:
* stylesheets/db2html-glossary.xsl:
* stylesheets/db2html-header.xsl:
* stylesheets/db2html-html.xsl:
* stylesheets/db2html-inline.xsl:
* stylesheets/db2html-titlepage.xsl:
* stylesheets/db2html-toc.xsl:
* stylesheets/db2html-xref.xsl:
* stylesheets/gettext.xsl:
* stylesheets/l10n.xml:
* stylesheets/l10n.xml.in:
- Made translations work in XSLT, still need to do plurals.

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -1,3 +1,5 @@
+@INTLTOOL_XML_RULE@
+
 yelpcustomizationdir=$(datadir)/sgml/docbook/yelp
 
 yelpcustomization_DATA = 	\
@@ -30,6 +32,7 @@ yelpcustomization_DATA = 	\
 	db2html-toc.xsl		\
 	db2html-xref.xsl	\
 	db2html.xsl		\
-	gettext.xsl
+	gettext.xsl		\
+	l10n.xml
 
 EXTRA_DIST=$(yelpcustomization_DATA)
