Updated Serbian translation.
2004-01-10  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added src/yelp-error.c.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,6 +6,7 @@ src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-db-pager.c
 src/yelp-db2html.c
+src/yelp-error.c
 src/yelp-history.c
 src/yelp-info.c
 src/yelp-main.c
