stylesheets/l10n.xml.in - s/Bigliography/Bibliography/
* stylesheets/l10n.xml.in
- s/Bigliography/Bibliography/

--- a/stylesheets/l10n.xml.in
+++ b/stylesheets/l10n.xml.in
@@ -95,8 +95,8 @@
 	<_msgstr>Author</_msgstr>
 </msg>
 <msg>
-	<msgid>Bigliography</msgid>
-	<_msgstr>Bigliography</_msgstr>
+	<msgid>Bibliography</msgid>
+	<_msgstr>Bibliography</_msgstr>
 </msg>
 <msg>
 	<msgid>Book</msgid>
