--- a/stylesheets/l10n.xml.in
+++ b/stylesheets/l10n.xml.in
@@ -28,58 +28,76 @@
 </msg>
 
 <msg>
+	<!-- Link to the titlepage of a <bibliography> -->
 	<msgid>About This Bibliography</msgid>
 	<_msgstr>About This Bibliography</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <book> -->
 	<msgid>About This Book</msgid>
 	<_msgstr>About This Book</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <chapter> -->
 	<msgid>About This Chapter</msgid>
 	<_msgstr>About This Chapter</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <refentry> -->
 	<msgid>About This Entry</msgid>
 	<_msgstr>About This Entry</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <glossary> -->
 	<msgid>About This Glossary</msgid>
 	<_msgstr>About This Glossary</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of an <index> and <setindex> -->
 	<msgid>About This Index</msgid>
 	<_msgstr>About This Index</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <part> -->
 	<msgid>About This Part</msgid>
 	<_msgstr>About This Part</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <preface> -->
 	<msgid>About This Preface</msgid>
 	<_msgstr>About This Preface</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <reference> -->
 	<msgid>About This Reference</msgid>
 	<_msgstr>About This Reference</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of any of <sect*> and <refsect*> -->
 	<msgid>About This Section</msgid>
 	<_msgstr>About This Section</_msgstr>
 </msg>
 <msg>
+	<!-- Link to the titlepage of a <set> -->
 	<msgid>About This Set</msgid>
 	<_msgstr>About This Set</_msgstr>
 </msg>
 <msg>
+	<!-- From the <affiliation> element.
+	Used when listing authors/contributors, like so:
+	Shaun McCance
+	  Affiliation: GNOME Documentation Project
+	-->
 	<msgid>Affiliation</msgid>
 	<_msgstr>Affiliation</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <appendix> element. -->
 	<msgid>Appendix</msgid>
 	<_msgstr>Appendix</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <article> element. -->
 	<msgid>Article</msgid>
 	<_msgstr>Article</_msgstr>
 </msg>
@@ -90,27 +108,33 @@
 	<_msgstr>Audience</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of authors. -->
 	<msgid>Author</msgid>
 	<msgid_plural>Authors</msgid_plural>
 	<_msgstr>Author</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <bibliography> element. -->
 	<msgid>Bibliography</msgid>
 	<_msgstr>Bibliography</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <book> element. -->
 	<msgid>Book</msgid>
 	<_msgstr>Book</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <caution> element. -->
 	<msgid>Caution</msgid>
 	<_msgstr>Caution</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <chapter> element. -->
 	<msgid>Chapter</msgid>
 	<_msgstr>Chapter</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <colophon> element. -->
 	<msgid>Colophon</msgid>
 	<_msgstr>Colophon</_msgstr>
 </msg>
@@ -121,53 +145,69 @@
 	<_msgstr>Contents</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of collaborators. -->
 	<msgid>Collaborator</msgid>
 	<msgid_plural>Collaborators</msgid_plural>
 	<_msgstr>Collaborator</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of copyrights. -->
 	<msgid>Copyright</msgid>
 	<msgid_plural>Copyrights</msgid_plural>
 	<_msgstr>Copyright</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header for date column in the revision history. -->
 	<msgid>Date</msgid>
 	<_msgstr>Date</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <dedication> element. -->
 	<msgid>Dedication</msgid>
 	<_msgstr>Dedication</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of editors. -->
 	<msgid>Editor</msgid>
 	<msgid_plural>Editors</msgid_plural>
 	<_msgstr>Editor</_msgstr>
 </msg>
 <msg>
+	<!-- From the <email> element.
+	Used when listing authors/contributors, like so:
+	Shaun McCance
+	  Email: shaunm@gnome.org
+	-->
 	<msgid>Email</msgid>
 	<_msgstr>Email</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <example> element. -->
 	<msgid>Example</msgid>
 	<_msgstr>Example</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <figure> element. -->
 	<msgid>Figure</msgid>
 	<_msgstr>Figure</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <glossary> element. -->
 	<msgid>Glossary</msgid>
 	<_msgstr>Glossary</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <important> element. -->
 	<msgid>Important</msgid>
 	<_msgstr>Important</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <index> element. -->
 	<msgid>Index</msgid>
 	<_msgstr>Index</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <legalnotice> element. -->
 	<msgid>Legal Notice</msgid>
 	<_msgstr>Legal Notice</_msgstr>
 </msg>
@@ -178,18 +218,22 @@
 	<_msgstr>Level</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <msgaud> element. -->
 	<msgid>Message Audience</msgid>
 	<_msgstr>Message Audience</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <msglevel> element. -->
 	<msgid>Message Level</msgid>
 	<_msgstr>Message Level</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <msgorig> element. -->
 	<msgid>Message Origin</msgid>
 	<_msgstr>Message Origin</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <note> element. -->
 	<msgid>Note</msgid>
 	<_msgstr>Note</_msgstr>
 </msg>
@@ -200,76 +244,97 @@
 	<_msgstr>Origin</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of contributors. -->
 	<msgid>Other Contributor</msgid>
 	<msgid_plural>Other Contributors</msgid_plural>
 	<_msgstr>Other Contributor</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <part> element. -->
 	<msgid>Part</msgid>
 	<_msgstr>Part</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <preface> element. -->
 	<msgid>Preface</msgid>
 	<_msgstr>Preface</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header before a list of publishers. -->
 	<msgid>Publisher</msgid>
 	<msgid_plural>Publishers</msgid_plural>
 	<_msgstr>Publisher</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <reference> element. -->
 	<msgid>Reference</msgid>
 	<_msgstr>Reference</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <refentry> element. -->
 	<msgid>Reference Entry</msgid>
 	<_msgstr>Reference Entry</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <refsect*> elements. -->
 	<msgid>Reference Section</msgid>
 	<_msgstr>Reference Section</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <revhistory> element. -->
 	<msgid>Revision History</msgid>
 	<_msgstr>Revision History</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <sect*> elements. -->
 	<msgid>Section</msgid>
 	<_msgstr>Section</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <see> element. -->
 	<msgid>See</msgid>
 	<_msgstr>See</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <seealso> element. -->
 	<msgid>See Also</msgid>
 	<_msgstr>See Also</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <setindex> element. -->
 	<msgid>Set Index</msgid>
 	<_msgstr>Set Index</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <table> element. -->
 	<msgid>Table</msgid>
 	<_msgstr>Table</_msgstr>
 </msg>
 <msg>
+	<!-- Used for a link to a table of contents. -->
 	<msgid>Table of Contents</msgid>
 	<_msgstr>Table of Contents</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <tip> element. -->
 	<msgid>Tip</msgid>
 	<_msgstr>Tip</_msgstr>
 </msg>
 <msg>
+	<!-- Used as a header for title column in the revision history. -->
 	<msgid>Title</msgid>
 	<_msgstr>Title</_msgstr>
 </msg>
 <msg>
+	<!-- Used when linking to an element of unknown type.  Generally
+	speaking, if this occurs the stylesheets should be updated to
+	handle the element properly.  Using the word 'Unknown' allows
+	the stylesheets to fail somewhat gracefully. -->
 	<msgid>Unknown</msgid>
 	<_msgstr>Unknown</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <warning> element. -->
 	<msgid>Warning</msgid>
 	<_msgstr>Warning</_msgstr>
 </msg>
