Added test-man-parser to .cvsignore
* src/.cvsignore: Added test-man-parser to .cvsignore

* src/Makefile.am:
* src/yelp-error.c:
* src/yelp-error.h:
* src/yelp-io-channel.c:
* src/yelp-io-channel.h:
* src/yelp-man-parser.c:
- Kick-ass custom GIOChannel that automatically uses zlib and libbz2.

* stylesheets/.cvsignore: Added l10n.xml to .cvsignore

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,10 +37,13 @@ yelp-marshal.c: yelp-marshal.h
 yelp-marshal-main.c: yelp-marshal.c
 
 test_man_parser_SOURCES =						\
+	yelp-error.c		yelp-error.h				\
+	yelp-io-channel.c	yelp-io-channel.h			\
 	yelp-man-parser.c	yelp-man-parser.h			\
 	test-man-parser.c
 
-test_man_parser_LDADD = @YELP_LIBS@
+test_man_parser_LDADD =							\
+	@YELP_LIBS@ $(Z_LIBS) $(BZ_LIBS)
 
 test_pager_SOURCES =							\
 	yelp-db-pager.c		yelp-db-pager.h				\
