- Small changes to pluralized headers in titlepage.
* stylesheets/db2html-titlepage.xsl:
* stylesheets/gettext.xsl:
- Small changes to pluralized headers in titlepage.

--- a/stylesheets/l10n.xml.in
+++ b/stylesheets/l10n.xml.in
@@ -110,8 +110,12 @@
 <msg>
 	<!-- Used as a header before a list of authors. -->
 	<msgid>Author</msgid>
-	<msgid_plural>Authors</msgid_plural>
 	<_msgstr>Author</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of authors. -->
+	<msgid>Authors</msgid>
+	<_msgstr>Authors</_msgstr>
 </msg>
 <msg>
 	<!-- Used for the <bibliography> element. -->
@@ -147,14 +151,22 @@
 <msg>
 	<!-- Used as a header before a list of collaborators. -->
 	<msgid>Collaborator</msgid>
-	<msgid_plural>Collaborators</msgid_plural>
 	<_msgstr>Collaborator</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of collaborators. -->
+	<msgid>Collaborators</msgid>
+	<_msgstr>Collaborators</_msgstr>
 </msg>
 <msg>
 	<!-- Used as a header before a list of copyrights. -->
 	<msgid>Copyright</msgid>
-	<msgid_plural>Copyrights</msgid_plural>
 	<_msgstr>Copyright</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of copyrights. -->
+	<msgid>Copyrights</msgid>
+	<_msgstr>Copyrights</_msgstr>
 </msg>
 <msg>
 	<!-- Used as a header for date column in the revision history. -->
@@ -169,8 +181,12 @@
 <msg>
 	<!-- Used as a header before a list of editors. -->
 	<msgid>Editor</msgid>
-	<msgid_plural>Editors</msgid_plural>
 	<_msgstr>Editor</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of editors. -->
+	<msgid>Editors</msgid>
+	<_msgstr>Editors</_msgstr>
 </msg>
 <msg>
 	<!-- From the <email> element.
@@ -246,8 +262,12 @@
 <msg>
 	<!-- Used as a header before a list of contributors. -->
 	<msgid>Other Contributor</msgid>
-	<msgid_plural>Other Contributors</msgid_plural>
 	<_msgstr>Other Contributor</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of contributors. -->
+	<msgid>Other Contributors</msgid>
+	<_msgstr>Other Contributors</_msgstr>
 </msg>
 <msg>
 	<!-- Used for the <part> element. -->
@@ -262,8 +282,12 @@
 <msg>
 	<!-- Used as a header before a list of publishers. -->
 	<msgid>Publisher</msgid>
-	<msgid_plural>Publishers</msgid_plural>
 	<_msgstr>Publisher</_msgstr>
+</msg>
+<msg>
+	<!-- Used as a header before a list of publishers. -->
+	<msgid>Publishers</msgid>
+	<_msgstr>Publishers</_msgstr>
 </msg>
 <msg>
 	<!-- Used for the <reference> element. -->
