- Added string 'About This Article'. - Made gettext behave more nicely
* stylesheets/gettext.xsl:
* stylesheets/l10n.xml.in:
- Added string 'About This Article'.
- Made gettext behave more nicely when a string isn't found.

--- a/stylesheets/l10n.xml.in
+++ b/stylesheets/l10n.xml.in
@@ -28,6 +28,11 @@
 </msg>
 
 <msg>
+	<!-- Link to the titlepage of a <article> -->
+	<msgid>About This Article</msgid>
+	<_msgstr>About This Article</_msgstr>
+</msg>
+<msg>
 	<!-- Link to the titlepage of a <bibliography> -->
 	<msgid>About This Bibliography</msgid>
 	<_msgstr>About This Bibliography</_msgstr>
