- Handling another category that doesn't exist. ~sigh~
* data/toc.xml.in:
- Handling another category that doesn't exist.  ~sigh~

* stylesheets/db2html-html.xsl:
- Modification to variablelist rendering.

* stylesheets/db2html-xref.xsl:
- Pull content of ulink from url when there's no content.

* test/testdoc1/testdoc1.xml:
- Test ulink.

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -191,6 +191,7 @@
 			<category>Applications|Utilities|Terminals</category>
 			<category>Applications|Utilities|Text Utilities</category>
 			<category>Applications|Utilities|Other</category>
+			<category>GNOME|Applications|System Tools</category>
 			<category>GNOME|Utilities</category>
 		</toc>
 		
