- Handle releaseinfo element.
* stylesheets/db2html-titlepage.xsl:
* stylesheets/l10n.xml.in:
- Handle releaseinfo element.

--- a/stylesheets/l10n.xml.in
+++ b/stylesheets/l10n.xml.in
@@ -310,6 +310,11 @@
 	<_msgstr>Reference Section</_msgstr>
 </msg>
 <msg>
+	<!-- Used for the <releaseinfo> element. -->
+	<msgid>Release Information</msgid>
+	<_msgstr>Release Information</_msgstr>
+</msg>
+<msg>
 	<!-- Used for the <revhistory> element. -->
 	<msgid>Revision History</msgid>
 	<_msgstr>Revision History</_msgstr>
