--- a/configure.in
+++ b/configure.in
@@ -58,7 +58,13 @@ CFLAGS="$YELP_CFLAGS $CFLAGS"
 
 YELP_MODULES="gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0"
 
-YELP_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0 bonobo-activation-2.0| sed -e 's/^/ /' -e 's/ \+$//' -e 's/ \+/ -I /g' -e 's/^ \+//'`"
+idl_dirs="`$PKG_CONFIG --variable=idldir gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0 bonobo-activation-2.0`"
+AC_PATH_PROGS(SED, gsed sed)
+if ${SED} --version 2>/dev/null | grep GNU >/dev/null 2>&1; then
+  YELP_IDL_INCLUDES="`echo ${idl_dirs} | ${SED} -e 's/^/ /' -e 's/ \+$//' -e 's/ \+/ -I /g' -e 's/^ \+//'`"
+else
+  YELP_IDL_INCLUDES="`echo ${idl_dirs} | ${SED} -E -e 's/^/ /' -e 's/ +$//' -e 's/ +/ -I /g' -e 's/^ +//'`"
+fi
 AC_SUBST(YELP_IDL_INCLUDES)
 
 dnl Check for whereis
