--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -4,13 +4,9 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
-<xsl:import href="/usr/share/sgml/gnome/docbook/html/db2html.xsl"/>
+<xsl:import href="@DB2HTML@"/>
 
 <xsl:param name="db.chunk.top" select="true()"/>
-<xsl:param name="db.chunk.cover_basename" select="'__yelp_cover'"/>
-<xsl:param name="db.chunk.info_basename"  select="'__yelp_info'"/>
-<xsl:param name="db.chunk.index_basename" select="'__yelp_index'"/>
-<xsl:param name="db.chunk.toc_basename"   select="'__yelp_toc"/>
 <xsl:param name="db.chunk.extension" select="''"/>
 
 <xsl:template name="db.chunk">
