- s/scrollkeeper\//scrollkeeper./ just for fun
* src/yelp-toc-pager.c:
- s/scrollkeeper\//scrollkeeper./ just for fun

* src/yelp-window.c:
- s/frag/frag_id/ for consistency

* stylesheets/db2html.xsl:
* stylesheets/db2html.xsl.in:
- s/db.chunk.top/db.chunk.chunk_top/ so it'll work

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -6,8 +6,12 @@
 
 <xsl:import href="@DB2HTML@"/>
 
-<xsl:param name="db.chunk.top" select="true()"/>
+<xsl:param name="db.chunk.chunk_top" select="true()"/>
 <xsl:param name="db.chunk.extension" select="''"/>
+<xsl:param name="db.chunk.cover_basename" select="'__yelp_cover'"/>
+<xsl:param name="db.chunk.info_basename"  select="'__yelp_info'"/>
+<xsl:param name="db.chunk.index_basename" select="'__yelp_index'"/>
+<xsl:param name="db.chunk.toc_basename"   select="'__yelp_toc"/>
 
 <xsl:template name="db.chunk">
   <xsl:param name="node" select="."/>
