Make the Gecko stuff build.
Wed Sep 29 00:53:03 2004  Jonathan Blandford  <jrb@gnome.org>

        * src/Makefile.am: Make the Gecko stuff build.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,7 @@ INCLUDES =								\
 	-I$(top_srcdir)							\
 	@YELP_CFLAGS@							\
 	$(MOZILLA_COMPONENT_CFLAGS)					\
+	-I$(MOZILLA_INCLUDE_ROOT)					\
 	-I$(MOZILLA_INCLUDE_ROOT)/dom					\
 	-I$(MOZILLA_INCLUDE_ROOT)/find					\
 	-I$(MOZILLA_INCLUDE_ROOT)/webbrwsr				\
