- Switched most of the stuff over to YelpDocInfo - Reworked parser
* configure.in:
* src/Makefile.am:
* src/test-man-parser.c:
* src/test-pager.c:
* src/test-uri.c:
* src/yelp-base.c:
* src/yelp-base.h:
* src/yelp-db-pager.c:
* src/yelp-db-pager.h:
* src/yelp-error.h:
* src/yelp-history.c:
* src/yelp-history.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-man-pager.c:
* src/yelp-man-pager.h:
* src/yelp-man-parser.c:
* src/yelp-man-parser.h:
* src/yelp-pager.c:
* src/yelp-pager.h:
* src/yelp-toc-pager.c:
* src/yelp-utils.c:
* src/yelp-utils.h:
* src/yelp-window.c:
* src/yelp-window.h:
- Switched most of the stuff over to YelpDocInfo
- Reworked parser semantics to make it simpler
- Broke lots of stuff

--- a/configure.in
+++ b/configure.in
@@ -55,6 +55,8 @@ PKG_CHECK_MODULES(YELP,
 	libexslt >= 0.8.1
 ])
 
+AC_SUBST([YELP_CFLAGS])
+
 CFLAGS="$YELP_CFLAGS $CFLAGS"
 
 YELP_MODULES="gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0"
