- Use the new menu API
* data/ui/Makefile.am:
* data/ui/yelp-ui.xml:
* src/yelp-window.c:
- Use the new menu API

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -1,7 +1,5 @@
 uidir = $(datadir)/yelp/ui
 
-ui_DATA = 								\
-	yelp.glade
+ui_DATA = yelp.glade yelp-ui.xml
 
-EXTRA_DIST = 								\
-	$(ui_DATA)
+EXTRA_DIST = $(ui_DATA)
