--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,14 @@
 AC_INIT(src/yelp-main.c)
-AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(yelp, 2.6.0)
+AM_CONFIG_HEADER(config.h)
+
+AM_SANITY_CHECK
+AM_MAINTAINER_MODE
 
 AC_PROG_INTLTOOL
+AC_PATH_PROG(GCONFTOOL, gconftool-2)
 
-AM_MAINTAINER_MODE
+AM_GCONF_SOURCE_2
 
 AC_PROG_CC
 AC_PROG_CXX
