- Patch from Don Scorgie to make Copy work. Yay!
* src/Makefile.am:
* src/yelp-gecko-utils.cpp:
* src/yelp-gecko-utils.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-window.c:
- Patch from Don Scorgie to make Copy work.  Yay!

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ INCLUDES =								\
 	-I$(MOZILLA_INCLUDE_ROOT)/pref					\
 	-I$(MOZILLA_INCLUDE_ROOT)/webbrwsr				\
 	-I$(MOZILLA_INCLUDE_ROOT)/string				\
+	-I$(MOZILLA_INCLUDE_ROOT)/webshell				\
 	-include $(MOZILLA_INCLUDE_ROOT)/mozilla-config.h		\
 	-DG_LOG_DOMAIN=\"Yelp\"						\
 	-DPREFIX=\""$(prefix)"\"					\
