- Themeable icons and watermarks
* data/icons/Makefile.am:
* data/yelp-icon-caution.png:
* data/yelp-icon-important.png:
* data/yelp-icon-note.png:
* data/yelp-icon-tip.png:
* data/yelp-icon-warning.png:
* data/yelp-watermark-blockquote-00AB.png:
* data/yelp-watermark-blockquote-00BB.png:
* data/yelp-watermark-blockquote-201C.png:
* data/yelp-watermark-blockquote-201E.png:
* src/yelp-db-pager.c:
* src/yelp-settings.c:
* src/yelp-settings.h:
* stylesheets/db2html.xsl.in:
- Themeable icons and watermarks

* src/yelp-gecko-utils.cpp:
* src/yelp-gecko-utils.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-settings.c:
* src/yelp-settings.h:
- Color settings

* src/yelp-utils.c:
- Fixed a very stupid crasher

* src/yelp-window.c:
- Pop the history stack on errors

--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -1,11 +1,15 @@
 icondir = $(datadir)/yelp/icons
 
-icon_DATA = 								\
-	caution.png							\
-	important.png							\
-	note.png							\
-	tip.png								\
-	warning.png
+icon_DATA = 						\
+	yelp-icon-caution.png				\
+	yelp-icon-important.png				\
+	yelp-icon-note.png				\
+	yelp-icon-tip.png				\
+	yelp-icon-warning.png				\
+	yelp-watermark-blockquote-00AB.png		\
+	yelp-watermark-blockquote-00BB.png		\
+	yelp-watermark-blockquote-201C.png		\
+	yelp-watermark-blockquote-201E.png
 
 EXTRA_DIST = 								\
 	$(icon_DATA)
