- Browse with caret - Color fixes
* data/yelp.schemas.in:
* data/ui/yelp.glade:
* src/yelp-gecko-utils.cpp:
* src/yelp-gecko-utils.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-settings.c:
* src/yelp-settings.h:
- Browse with caret
- Color fixes

* src/yelp-window.c:
- Proper history handling for errors

--- a/data/yelp.schemas.in
+++ b/data/yelp.schemas.in
@@ -2,6 +2,19 @@
 <gconfschemafile>
   <schemalist>
     <schema>
+      <key>/schemas/apps/yelp/use_caret</key>
+      <applyto>/apps/yelp/use_system_fonts</applyto>
+      <owner>yelp</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Use caret</short>
+        <long>
+          Use a keyboard-controllable caret when viewing pages.
+        </long>
+      </locale>
+    </schema>
+    <schema>
       <key>/schemas/apps/yelp/use_system_fonts</key>
       <applyto>/apps/yelp/use_system_fonts</applyto>
       <owner>yelp</owner>
