--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,7 @@ INCLUDES =								\
 	-I$(MOZILLA_INCLUDE_ROOT)/string				\
 	-I$(MOZILLA_INCLUDE_ROOT)/webshell				\
 	-include $(MOZILLA_INCLUDE_ROOT)/mozilla-config.h		\
+	-fno-rtti							\
 	-DG_LOG_DOMAIN=\"Yelp\"						\
 	-DPREFIX=\""$(prefix)"\"					\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"				\
