fix up handling of built sources for srcdir!=builddir builds.
2004-10-28  James Henstridge  <james@jamesh.id.au>

	* src/Makefile.am: fix up handling of built sources for
	srcdir!=builddir builds.

	* po/POTFILES.in: remove some files that have been removed.

	* data/Makefile.am: add some files to the clean list.

	* Makefile.am: add intltool files to the distclean list.

	* configure.in: clean up a bit, removing obsolete macro usage.

	* autogen.sh: use the gnome-common autogen.sh script.  Request a
	Automake 1.7.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,9 +16,14 @@ EXTRA_DIST = 						\
 	intltool-extract.in  				\
 	intltool-merge.in    				\
 	intltool-update.in				\
-	intltool-modules/XML/Parser/Style/OrigTree.pm	\
 	idl/GNOME_Yelp.idl				\
 	important_docs.xml				\
 	$(DESKTOP_IN_FILES)				\
 	$(DESKTOP_FILES)
 
+DISTCLEANFILES = \
+  intltool-extract \
+  intltool-merge \
+  intltool-update
+
+CLEANFILES = yelp.desktop
