- Do the -fno-rtti thing the way epiphany does it
* configure.in:
* src/Makefile.am:
- Do the -fno-rtti thing the way epiphany does it

* data/ui/yelp-ui.xml:
* src/yelp-base.c:
* src/yelp-db-pager.c:
* src/yelp-utils.c:
* src/yelp-window.c:
- Added stub for reload.  Don't use it unless you like things to crash
- Cancellation is somewhat working

* po/POTFILES.in:
- Added data/yelp.schemas.in and src/yelp-settings.c

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
 data/toc.xml.in
+data/yelp.schemas.in
 data/ui/yelp.glade
 src/GNOME_Yelp.server.in
 src/yelp-base.c
@@ -16,3 +17,4 @@ src/yelp-window.c
 stylesheets/l10n.xml.in
 yelp.desktop.in
 src/yelp-man-pager.c
+src/yelp-settings.c
