--- a/configure.in
+++ b/configure.in
@@ -15,11 +15,14 @@ AM_GCONF_SOURCE_2
 
 AC_PROG_CC
 AC_PROG_CXX
+AM_PROG_CC_STDC
 AC_ISC_POSIX
 AC_HEADER_STDC
 AM_PROG_LIBTOOL
 AM_PATH_ORBIT2
 AM_PATH_GLIB_2_0
+
+AC_SUBST([AM_CXXFLAGS])
  
 dnl NOTE : it appears that some systems do not like it when you use line
 dnl        continuation charactes to split CFLAGS into readable chunks
@@ -69,6 +72,14 @@ AC_SUBST(MOZILLA_INCLUDE_ROOT)
 
 MOZILLA_HOME="`$PKG_CONFIG --variable=libdir mozilla-gtkmozembed`"
 AC_SUBST(MOZILLA_HOME)
+
+AC_ARG_ENABLE([cpp-rtti],
+              AC_HELP_STRING([--enable-cpp-rtti],[Enable C++ RTTI]),[],
+              [enable_cpp_rtti=no])
+
+if test "x$enable_cpp_rtti" = "xno"; then
+  AM_CXXFLAGS="-fno-rtti $AM_CXXFLAGS"
+fi
 
 dnl Check for whereis
 case $host in
