patch by Christian Persch <chpe@gnome.org> to enable the compilation
2004-11-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-main.c: (main):
	patch by Christian Persch <chpe@gnome.org> to enable the compilation
	against firefox' gtkmozembed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,8 @@ INCLUDES =								\
 	-DLIBGNOME_MAN2HTML=\"$(LIBGNOME_MAN2HTML)\"			\
 	-DLIBGNOME_INFO2HTML=\"$(LIBGNOME_INFO2HTML)\"			\
 	-DSERVERDIR=\"$(libexecdir)\"					\
-	-DBINDIR=\""$(bindir)"\"
+	-DBINDIR=\""$(bindir)"\"					\
+	-DMOZILLA_HOME=\""$(MOZILLA_HOME)\""
 
 bin_PROGRAMS = yelp
 check_PROGRAMS = test-man-parser test-pager test-uri
