- Override db.xref.target
* stylesheets/db2html.xsl.in:
- Override db.xref.target

* stylesheets/man2html.xsl:
- Don't <pre> paragraphs, maybe

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -60,6 +60,12 @@
   </yelp:document>
 </xsl:template>
 
+<!-- == db.xref.target == -->
+<xsl:template name="db.xref.target">
+  <xsl:param name="linkend"/>
+  <xsl:value-of select="concat('#', $linkend)"/>
+</xsl:template>
+
 <!-- == db2html.admon.image == -->
 <xsl:template name="db2html.admon.image">
   <xsl:param name="node" select="."/>
